ping_pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: pingpong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
    #  volumes:
    #    - name: shared-image
    #      persistentVolumeClaim:
    #        claimName: image-claim
      containers:
        - name: pingpong
          image: domantas231/ping-pong:2.1
    #      volumeMounts:
    #        - name: shared-image
    #          mountPath: /usr/src/app/files
