ping_pong/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-material-ingress
spec:
  rules:
    - http:
        paths:
        - path: / 
          pathType: Exact
          backend:
            service:
              name: hashgenerator-svc
              port:
                number: 2345
        - path: /pingpong 
          pathType: Prefix
          backend:
            service:
              name: pingpong-svc
              port:
                number: 2345
